@@ -3,6 +3,7 @@ Gaim: The Pimpin' Penguin IM Clone thats good for the soul!
 version 0.50:
 	* Updated polish translation (Thanks Przemyslaw Sulek)
 	* Able to import GnomeICU contact lists
+	* Galeon as browser option (Thanks Rob McQueen)
 
 version 0.49 (11/29/2001):
 	* Can compile against GTK+ 2.0 (version 1.3.10/1.3.11)
